Added more options

--- a/popup.html
+++ b/popup.html
@@ -32,10 +32,15 @@
     <script src="popup.js"></script>
   </head>
   <body>
+    <div id="w1">1 week</div>
+    <div id="w2">2 weeks</div>
+    <div id="m1">1 month</div>
+    <div id="m2">2 months</div>
     <div id="m3">3 months</div>
     <div id="m6">6 months</div>
     <div id="y1">1 year</div>
     <div id="y2">2 years</div>
     <div id="y3">3 years</div>
+    <div id="y5">5 years</div>
   </body>
 </html>
