some ui improvements

--- a/popup.html
+++ b/popup.html
@@ -1,37 +1,39 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Set duration</title>
     <style>
-    body {
-      overflow: hidden;
-      margin: 0px;
-      padding: 1px;
-      background: white;
-    }
+      body {
+        overflow: hidden;
+        margin: 0px;
+        background: white;
+      }
 
-    div:first-child {
-      margin-top: 0px;
-    }
+      div:first-child {
+        margin-top: 0px;
+      }
 
-    div {
-      cursor: pointer;
-      text-align: center;
-      padding: 3px 4px;
-      font-family: sans-serif;
-      font-size: 1.2em;
-      width: 120px;
-      margin-top: 2px;
-      background: #dddddd;
-    }
-    div:hover {
-      background: #cccccc;
-    }
+      div {
+        cursor: pointer;
+        text-align: center;
+        padding: 4px 4px;
+        font-family: sans-serif;
+        font-size: 1.2em;
+        width: 150px;
+        background: #eeeeee;
+        border: 1px solid #c7c7c7;
+        border-collapse: collapse;
+      }
+      div:hover {
+        background: #dadada;
+      }
     </style>
     <script src="popup.js"></script>
   </head>
   <body>
+    <div id="d11">1 day</div>
+    <div id="d2">2 days</div>
+    <div id="d3">3 days</div>
     <div id="w1">1 week</div>
     <div id="w2">2 weeks</div>
     <div id="m1">1 month</div>
