update to manifest v3 and remove background script

--- a/popup.html
+++ b/popup.html
@@ -13,13 +13,14 @@
         margin-top: 0px;
       }
 
-      div {
+      div.time-option {
         cursor: pointer;
-        text-align: center;
-        padding: 4px 4px;
+        text-align: left;
+        padding: 4px;
+        padding-left: 30px;
         font-family: sans-serif;
         font-size: 1.2em;
-        width: 150px;
+        width: 100px;
         background: #eeeeee;
         border: 1px solid #c7c7c7;
         border-collapse: collapse;
@@ -31,18 +32,19 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    <div id="d11">1 day</div>
-    <div id="d2">2 days</div>
-    <div id="d3">3 days</div>
-    <div id="w1">1 week</div>
-    <div id="w2">2 weeks</div>
-    <div id="m1">1 month</div>
-    <div id="m2">2 months</div>
-    <div id="m3">3 months</div>
-    <div id="m6">6 months</div>
-    <div id="y1">1 year</div>
-    <div id="y2">2 years</div>
-    <div id="y3">3 years</div>
-    <div id="y5">5 years</div>
+    <div class="time-option" id="d1">1 day</div>
+    <div class="time-option" id="d2">2 days</div>
+    <div class="time-option" id="d3">3 days</div>
+    <div class="time-option" id="w1">1 week</div>
+    <div class="time-option" id="w2">2 weeks</div>
+    <div class="time-option" id="w3">3 weeks</div>
+    <div class="time-option" id="m1">1 month</div>
+    <div class="time-option" id="m2">2 months</div>
+    <div class="time-option" id="m3">3 months</div>
+    <div class="time-option" id="m6">6 months</div>
+    <div class="time-option" id="y1">1 year</div>
+    <div class="time-option" id="y2">2 years</div>
+    <div class="time-option" id="y3">3 years</div>
+    <div class="time-option" id="y5">5 years</div>
   </body>
 </html>
